--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
-    "prisma": "^6.12.0"
+    "prisma": "^6.12.0",
+    "zod": "^4.0.5"
   }
 }
