--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
     "prisma": "^6.12.0",
+    "socket.io": "^4.8.1",
     "zod": "^4.0.5"
   }
 }
